--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^7.0.2",
     "mini-css-extract-plugin": "^1.5.0",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.11",
